--- a/Assignment2/perceiver_image_classification.ipynb
+++ b/Assignment2/perceiver_image_classification.ipynb
@@ -7,7 +7,7 @@
       "name": "perceiver image classification.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP+j028AJ4q5qGQhR1eOtk2",
+      "authorship_tag": "ABX9TyOXe0Vto4QxiRLSYv5SnOA3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,23 +36,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RE8WEUbAhE-n",
-        "outputId": "e1d8732a-da8f-4a1e-fe2c-6a6cf773ba98"
+        "outputId": "22fae2c6-6b34-41ac-93e8-b44d356496bf"
       },
       "source": [
         "pip install -U tensorflow-addons"
       ],
-      "execution_count": 1,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Collecting tensorflow-addons\n",
-            "  Downloading tensorflow_addons-0.14.0-cp37-cp37m-manylinux_2_12_x86_64.manylinux2010_x86_64.whl (1.1 MB)\n",
-            "\u001b[?25l\r\u001b[K     |▎                               | 10 kB 15.9 MB/s eta 0:00:01\r\u001b[K     |▋                               | 20 kB 17.3 MB/s eta 0:00:01\r\u001b[K     |▉                               | 30 kB 8.1 MB/s eta 0:00:01\r\u001b[K     |█▏                              | 40 kB 7.1 MB/s eta 0:00:01\r\u001b[K     |█▌                              | 51 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |█▊                              | 61 kB 4.6 MB/s eta 0:00:01\r\u001b[K     |██                              | 71 kB 4.4 MB/s eta 0:00:01\r\u001b[K     |██▍                             | 81 kB 4.9 MB/s eta 0:00:01\r\u001b[K     |██▋                             | 92 kB 5.0 MB/s eta 0:00:01\r\u001b[K     |███                             | 102 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |███▎                            | 112 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |███▌                            | 122 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |███▉                            | 133 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |████▏                           | 143 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |████▍                           | 153 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |████▊                           | 163 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |█████                           | 174 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |█████▎                          | 184 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |█████▋                          | 194 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |██████                          | 204 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |██████▏                         | 215 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |██████▌                         | 225 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |██████▉                         | 235 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |███████                         | 245 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |███████▍                        | 256 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |███████▊                        | 266 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |████████                        | 276 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |████████▎                       | 286 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |████████▋                       | 296 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |████████▉                       | 307 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |█████████▏                      | 317 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |█████████▌                      | 327 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |█████████▊                      | 337 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |██████████                      | 348 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |██████████▍                     | 358 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |██████████▋                     | 368 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |███████████                     | 378 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |███████████▎                    | 389 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |███████████▌                    | 399 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |███████████▉                    | 409 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |████████████▏                   | 419 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |████████████▍                   | 430 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |████████████▊                   | 440 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |█████████████                   | 450 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |█████████████▎                  | 460 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |█████████████▋                  | 471 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |██████████████                  | 481 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |██████████████▏                 | 491 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |██████████████▌                 | 501 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |██████████████▉                 | 512 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |███████████████                 | 522 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |███████████████▍                | 532 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |███████████████▊                | 542 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |████████████████                | 552 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |████████████████▎               | 563 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |████████████████▋               | 573 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |████████████████▉               | 583 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |█████████████████▏              | 593 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |█████████████████▌              | 604 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |█████████████████▊              | 614 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |██████████████████              | 624 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |██████████████████▍             | 634 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |██████████████████▋             | 645 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |███████████████████             | 655 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |███████████████████▎            | 665 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |███████████████████▌            | 675 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |███████████████████▉            | 686 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |████████████████████▏           | 696 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |████████████████████▍           | 706 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |████████████████████▊           | 716 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |█████████████████████           | 727 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |█████████████████████▎          | 737 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |█████████████████████▋          | 747 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |██████████████████████          | 757 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |██████████████████████▏         | 768 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |██████████████████████▌         | 778 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |██████████████████████▉         | 788 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |███████████████████████         | 798 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |███████████████████████▍        | 808 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |███████████████████████▊        | 819 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |████████████████████████        | 829 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |████████████████████████▎       | 839 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |████████████████████████▋       | 849 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |████████████████████████▉       | 860 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |█████████████████████████▏      | 870 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |█████████████████████████▍      | 880 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |█████████████████████████▊      | 890 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |██████████████████████████      | 901 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▎     | 911 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▋     | 921 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |███████████████████████████     | 931 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▏    | 942 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▌    | 952 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▉    | 962 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |████████████████████████████    | 972 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▍   | 983 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▊   | 993 kB 4.3 MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████   | 1.0 MB 4.3 MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▎  | 1.0 MB 4.3 MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▋  | 1.0 MB 4.3 MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▉  | 1.0 MB 4.3 MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████▏ | 1.0 MB 4.3 MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████▌ | 1.1 MB 4.3 MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████▊ | 1.1 MB 4.3 MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████ | 1.1 MB 4.3 MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▍| 1.1 MB 4.3 MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▋| 1.1 MB 4.3 MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 1.1 MB 4.3 MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 1.1 MB 4.3 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: typeguard>=2.7 in /usr/local/lib/python3.7/dist-packages (from tensorflow-addons) (2.7.1)\n",
-            "Installing collected packages: tensorflow-addons\n",
-            "Successfully installed tensorflow-addons-0.14.0\n"
+            "Requirement already satisfied: tensorflow-addons in /usr/local/lib/python3.7/dist-packages (0.14.0)\n",
+            "Requirement already satisfied: typeguard>=2.7 in /usr/local/lib/python3.7/dist-packages (from tensorflow-addons) (2.7.1)\n"
           ]
         }
       ]
@@ -78,7 +74,7 @@
         "from tensorflow.keras import layers\n",
         "import tensorflow_addons as tfa"
       ],
-      "execution_count": 2,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -97,31 +93,28 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4io1opDThTeZ",
-        "outputId": "91b35ded-a74a-4feb-fcfe-ee07a155b88e"
+        "outputId": "6414d3e5-773d-4c5d-ad1c-ba88b16c75af"
       },
       "source": [
         "num_classes = 100\n",
         "input_shape = (32, 32, 3)\n",
         "\n",
         "(x_train, y_train), (x_test, y_test) = keras.datasets.cifar100.load_data()\n",
-        "x_train=x_train[0:2000]\n",
-        "y_train=y_train[0:2000]\n",
-        "x_test=x_test[0:100]\n",
-        "y_test=y_test[0:100]\n",
+        "x_train=x_train[0:4000]\n",
+        "y_train=y_train[0:4000]\n",
+        "x_test=x_test[0:400]\n",
+        "y_test=y_test[0:400]\n",
         "print(f\"x_train shape: {x_train.shape} - y_train shape: {y_train.shape}\")\n",
         "print(f\"x_test shape: {x_test.shape} - y_test shape: {y_test.shape}\")"
       ],
-      "execution_count": 3,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Downloading data from https://www.cs.toronto.edu/~kriz/cifar-100-python.tar.gz\n",
-            "169009152/169001437 [==============================] - 11s 0us/step\n",
-            "169017344/169001437 [==============================] - 11s 0us/step\n",
-            "x_train shape: (2000, 32, 32, 3) - y_train shape: (2000, 1)\n",
-            "x_test shape: (100, 32, 32, 3) - y_test shape: (100, 1)\n"
+            "x_train shape: (4000, 32, 32, 3) - y_train shape: (4000, 1)\n",
+            "x_test shape: (400, 32, 32, 3) - y_test shape: (400, 1)\n"
           ]
         }
       ]
@@ -142,7 +135,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QXxvtbpGvS4O",
-        "outputId": "6a23567a-45dc-49d3-854d-a92e13c70b37"
+        "outputId": "50ced281-c2fb-4e43-b490-7744528f8e44"
       },
       "source": [
         "learning_rate = 0.001\n",
@@ -174,7 +167,7 @@
         "print(f\"Latent array shape: {latent_dim} X {projection_dim}\")\n",
         "print(f\"Data array shape: {num_patches} X {projection_dim}\")"
       ],
-      "execution_count": 4,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -198,7 +191,7 @@
       "source": [
         ""
       ],
-      "execution_count": 4,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -230,7 +223,7 @@
         "# Compute the mean and the variance of the training data for normalization.\n",
         "data_augmentation.layers[0].adapt(x_train)"
       ],
-      "execution_count": 5,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -259,7 +252,7 @@
         "    ffn = keras.Sequential(ffn_layers)\n",
         "    return ffn"
       ],
-      "execution_count": 6,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -295,7 +288,7 @@
         "        patches = tf.reshape(patches, [batch_size, -1, patch_dims])\n",
         "        return patches"
       ],
-      "execution_count": 7,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -327,7 +320,7 @@
         "        encoded = self.projection(patches) + self.position_embedding(positions)\n",
         "        return encoded"
       ],
-      "execution_count": 8,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -389,7 +382,7 @@
         "    model = keras.Model(inputs=inputs, outputs=outputs)\n",
         "    return model\n"
       ],
-      "execution_count": 9,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -442,7 +435,7 @@
         "    model = keras.Model(inputs=inputs, outputs=x0)\n",
         "    return model"
       ],
-      "execution_count": 10,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -557,7 +550,7 @@
         "        logits = self.classification_head(representation)\n",
         "        return logits\n"
       ],
-      "execution_count": 11,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -619,7 +612,7 @@
         "    # Return history to plot learning curves.\n",
         "    return history\n"
       ],
-      "execution_count": 12,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -629,7 +622,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WduEJmuRw8PA",
-        "outputId": "b1695b34-7a09-4510-f2c0-d4af4fd017f0"
+        "outputId": "b008b83f-cad1-4f68-ad14-7ab607d16550"
       },
       "source": [
         "perceiver_classifier = Perceiver(\n",
@@ -648,20 +641,25 @@
         "\n",
         "history = run_experiment(perceiver_classifier)"
       ],
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Epoch 1/5\n",
-            "113/113 [==============================] - 112s 745ms/step - loss: 4.7294 - acc: 0.0211 - top5-acc: 0.0733 - val_loss: 4.6404 - val_acc: 0.0200 - val_top5-acc: 0.0800\n",
+            "225/225 [==============================] - 186s 739ms/step - loss: 4.6693 - acc: 0.0150 - top5-acc: 0.0744 - val_loss: 4.5204 - val_acc: 0.0250 - val_top5-acc: 0.1025\n",
             "Epoch 2/5\n",
-            "113/113 [==============================] - 84s 741ms/step - loss: 4.5778 - acc: 0.0206 - top5-acc: 0.1017 - val_loss: 4.5675 - val_acc: 0.0150 - val_top5-acc: 0.0950\n",
+            "225/225 [==============================] - 170s 756ms/step - loss: 4.5547 - acc: 0.0239 - top5-acc: 0.0994 - val_loss: 4.4443 - val_acc: 0.0250 - val_top5-acc: 0.1300\n",
             "Epoch 3/5\n",
-            "113/113 [==============================] - 84s 743ms/step - loss: 4.4737 - acc: 0.0406 - top5-acc: 0.1433 - val_loss: 4.4703 - val_acc: 0.0750 - val_top5-acc: 0.1650\n",
+            "225/225 [==============================] - 166s 735ms/step - loss: 4.4606 - acc: 0.0289 - top5-acc: 0.1322 - val_loss: 4.4241 - val_acc: 0.0375 - val_top5-acc: 0.1175\n",
             "Epoch 4/5\n",
-            " 48/113 [===========>..................] - ETA: 46s - loss: 4.3959 - acc: 0.0508 - top5-acc: 0.1589"
+            "225/225 [==============================] - 170s 755ms/step - loss: 4.3801 - acc: 0.0406 - top5-acc: 0.1525 - val_loss: 4.3423 - val_acc: 0.0425 - val_top5-acc: 0.1450\n",
+            "Epoch 5/5\n",
+            "225/225 [==============================] - 165s 731ms/step - loss: 4.3227 - acc: 0.0425 - top5-acc: 0.1694 - val_loss: 4.2820 - val_acc: 0.0375 - val_top5-acc: 0.1575\n",
+            "13/13 [==============================] - 7s 428ms/step - loss: 4.2553 - acc: 0.0325 - top5-acc: 0.1875\n",
+            "Test accuracy: 3.25%\n",
+            "Test top 5 accuracy: 18.75%\n"
           ]
         }
       ]
